rules.v4
# Generated by iptables-save v1.8.10 (nf_tables) on Thu Feb 29 17:02:10 2024
*mangle
:PREROUTING ACCEPT [47:4953]
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
-A PREROUTING -m conntrack --ctstate INVALID -j DROP
-A PREROUTING -p tcp -m tcp ! --tcp-flags FIN,SYN,RST,ACK SYN -m conntrack --ctstate NEW -j DROP
-A PREROUTING -p tcp -m conntrack --ctstate NEW -m tcpmss ! --mss 536:65535 -j DROP
-A PREROUTING -p tcp -m tcp --tcp-flags FIN,SYN FIN,SYN -j DROP
-A PREROUTING -p tcp -m tcp --tcp-flags SYN,RST SYN,RST -j DROP
-A PREROUTING -p tcp -m tcp --tcp-flags FIN,RST FIN,RST -j DROP
-A PREROUTING -p tcp -m tcp --tcp-flags FIN,ACK FIN -j DROP
-A PREROUTING -p tcp -m tcp --tcp-flags ACK,URG URG -j DROP
-A PREROUTING -p tcp -m tcp --tcp-flags PSH,ACK PSH -j DROP
-A PREROUTING -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG NONE -j DROP
COMMIT
# Completed on Thu Feb 29 17:02:10 2024
# Generated by iptables-save v1.8.10 (nf_tables) on Thu Feb 29 17:02:10 2024
*filter
:INPUT DROP [117:28651]
:FORWARD DROP [12353:556562]
:OUTPUT DROP [2200:145572]
:DmzOnline - [0:0]
:Dmznet - [0:0]
:Itznet - [0:0]
-A INPUT -d 10.0.0.0/16 -p icmp -m icmp --icmp-type 8 -j ACCEPT
-A INPUT -s 10.0.0.0/16 -p icmp -m icmp --icmp-type 0 -j ACCEPT
-A FORWARD -d 10.0.0.0/16 -i eth0 -j Itznet
-A FORWARD -s 10.0.0.0/16 -i eth1 -j Itznet
-A FORWARD -j Dmznet
-A OUTPUT -d 10.0.0.0/16 -p icmp -m icmp --icmp-type 0 -j ACCEPT
-A OUTPUT -d 10.0.0.0/16 -p icmp -m icmp --icmp-type 8 -j ACCEPT
-A DmzOnline -s 10.1.0.0/16 -i eth2 -j ACCEPT
-A DmzOnline -d 10.1.0.0/16 -i eth0 -j ACCEPT
-A Dmznet -d 10.1.0.0/16 -i eth0 -m state --state NEW,ESTABLISHED -j ACCEPT
-A Dmznet -s 10.1.0.0/16 -i eth2 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A Itznet -s 10.0.0.0/16 -i eth1 -p udp -m udp --dport 53 -j ACCEPT
-A Itznet -s 10.0.0.0/16 -i eth1 -p tcp -m tcp --dport 443 -m state --state NEW -j ACCEPT
-A Itznet -s 10.0.0.0/16 -i eth1 -p tcp -m tcp --dport 80 -m state --state NEW -j ACCEPT
-A Itznet -d 10.0.0.0/16 -i eth0 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A Itznet -s 10.0.0.0/16 -i eth1 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A Itznet -d 10.0.0.0/16 -i eth0 -j LOG --log-prefix "Suspicious: "
-A Itznet -j DROP
COMMIT
# Completed on Thu Feb 29 17:02:10 2024
# Generated by iptables-save v1.8.10 (nf_tables) on Thu Feb 29 17:02:10 2024
*nat
:PREROUTING ACCEPT [8352:1040933]
:INPUT ACCEPT [164:15484]
:OUTPUT ACCEPT [2295:171599]
:POSTROUTING ACCEPT [2398568:383724956]
-A PREROUTING -i eth1 -p udp -m udp --dport 53 -j DNAT --to-destination 192.168.31.123
-A PREROUTING -d 192.168.31.41/32 -i eth0 -p tcp -m tcp --dport 80 -j DNAT --to-destination 10.1.0.3
-A POSTROUTING -s 10.0.0.0/16 -o eth0 -j MASQUERADE
-A POSTROUTING -s 10.1.0.0/16 -o eth0 -j MASQUERADE
COMMIT
# Completed on Thu Feb 29 17:02:10 2024
